--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,14 @@ body {
 }
 
 .section {
+  z-index: 10;
   padding: 2rem;
   background-color: #181818;
 }
 
 .section-b{
-
+  background-color: red;
+  z-index: 0;
 }
 
 
@@ -62,21 +64,37 @@ body {
 
 /*Layout styles*/
 
+main {
+  min-height: 100vh;
+  background-color: red;
+  padding-top: 5rem;
+}
+
 .grid-wrapper {
   display: grid;
+  max-width: 80%;
+  margin: auto;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
   grid-auto-rows: minmax(5rem, auto);
 }
 
 .one {
-  grid-column: 1 / 3;
+  grid-column: 1 / -3;
   grid-row: 1;
+  margin-top: 3rem;
+  margin-left: 50%;
+  width: 80%;
 }
 
 .two {
-  grid-column: 2 / 4;
+  grid-column: 2 / 7;
   grid-row: 1 / 3;
+  margin-right: 20%;
+  background-image: url("/public/images/Photo 01.11.19, 10 42 48.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .three {
